2006-03-28  Don Allingham  <don@gramps-project.org>
	* src/gramps_main.py: remove 2.0.X message
	* src/ViewManager.py: remove expanduser
	* src/Exporter.py: remove expanduser
	* src/plugins/BookReport.py: remove expanduser
	* src/plugins/Calendar.py: remove expanduser
	* src/plugins/GrampViz.py: remove expanduser
	* src/const.py.in: fix home dir.
	* src/PluginsUtils.py: remove expanduser
	* src/RecentFiles.py: remove expanduser

2006-03-28  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/PluginUtils/_Options.py: Use filename instead of URI for XML parser
	* src/PluginUtils/_Report.py: Use filename instead of URI for XML parser
	* src/PluginUtils/_ReportOptions.py: Use filename instead of URI
	* src/Plugins/BookReport.py: Use filename instead of URI for XML parser
	* src/RecentFiles.py: Use filename instead of URI for XML parser
	* src/GenericFilter.py: Use filename instead of URI for XML parser
	* src/BaseDoc.py: Use filename instead of URI for XML parser 
	(works on Windows and Linux)
	* src/plugins/FamilyGroup.py: use new functions

2006-03-28  Don Allingham  <don@gramps-project.org>
	* src/const.py.in: use_thumbnail tag
	* src/ImgManip.py: use pygtk instead of Imagick for image
	conversions
	* src/Mime/_GnomeMime.py: find the default application instead of 
	using the first returned by mime_get_app_short_list

2006-03-27  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py (_PersonWidget_base): Use other name for
	the drag_begin callback to not conflict with a gtk.Widget internal method.

2006-03-26  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PedigreeView.py: start of dnd-icon - not working yet
	* src/DataViews/_PersonView.py: set dnd icon
	* src/PageView.py: set dnd icon

2006-03-25  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py: Add DnD support to the person boxes;
	copy person data into clipboard; Open FamilyEditor to add missing
	parents
